update meta tag header

--- a/transforming-transportation/resources/index.html
+++ b/transforming-transportation/resources/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Transforming Transportation</title>
 <meta name="viewport" content="width=device-width">
+<meta charset="UTF-8">
 <link rel="shortcut icon" href="../files/tt-favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="../css/normalize.css" type="text/css">
 <link rel="stylesheet" href="../css/style.css" type="text/css">
@@ -12,7 +13,7 @@
           <a href="../"><img class="tt-logo" src="../files/tt-logo.svg"></a>
             <nav>
               <ul>
-              <li><a href="information.html">Info</a></li>
+              <li><a href="../information">Info</a></li>
               <li>Resources</li>
               <li><a href="http://live.worldbank.org/transforming-transportation-2018" target="_blank">Watch</a></li>
               <li><a href="https://twitter.com/hashtag/TTDC19" target="_blank"><img src="../files/twitter-icon.png"></a></li>
