--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Transforming Transportation</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
 <link rel="shortcut icon" href="files/tt-favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="css/normalize.css" type="text/css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
