--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
+<html>
 <head>
 <title>Transforming Transportation</title>
+<meta name="description" content="Transforming Transportation conference hosted by the World Resources Institute and the World Bank">
+<meta name="keywords" content="transforming transportation, cities, transforming transportation 2019, mobility conference, WRI Ross Center for Sustainable Cities, World Bank, EMBARQ">
+<meta name="author" content="WRI Ross Center for Sustainable Cities">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <link rel="shortcut icon" href="files/tt-favicon.ico" type="image/x-icon">
@@ -12,7 +16,9 @@
 <body>
    <header>
        <div id="tt-header">
-         <a href="index.html""><img class="tt-logo" src="files/tt-logo.svg"></a>
+         <img class="tt-logo" src="files/tt-logo.svg">
+         <label for="tt-responsive">&#9776;</label>
+         <input type="checkbox" id="tt-responsive">
             <nav>
               <ul>
               <li><a href="information">Info</a></li>
