--- a/transforming-transportation/resources/index.html
+++ b/transforming-transportation/resources/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
+<html>
 <head>
 <title>Transforming Transportation</title>
+<meta name="description" content="Transforming Transportation conference hosted by the World Resources Institute and the World Bank">
+<meta name="keywords" content="transforming transportation, cities, transforming transportation 2019, mobility conference, WRI Ross Center for Sustainable Cities, World Bank, EMBARQ">
+<meta name="author" content="WRI Ross Center for Sustainable Cities">
 <meta name="viewport" content="width=device-width">
 <meta charset="UTF-8">
 <link rel="shortcut icon" href="../files/tt-favicon.ico" type="image/x-icon">
