--- a/transforming-transportation/information/index.html
+++ b/transforming-transportation/information/index.html
@@ -15,7 +15,9 @@
    <header>
       <div id="tt-header">
          <a href="../"><img class="tt-logo" src="../files/tt-logo.svg"></a>
-        <nav>
+         <label for="tt-responsive">&#9776;</label>
+         <input type="checkbox" id="tt-responsive">
+         <nav>
               <ul>
               <li>Info</li>
               <li><a href="../resources">Resources</a></li>
