--- a/transforming-transportation/resources/index.html
+++ b/transforming-transportation/resources/index.html
@@ -14,7 +14,9 @@
 <body>
    <header>
       <div id="tt-header">
-          <a href="../"><img class="tt-logo" src="../files/tt-logo.svg"></a>
+           <a href="../"><img class="tt-logo" src="../files/tt-logo.svg"></a>
+           <label for="tt-responsive">&#9776;</label>
+           <input type="checkbox" id="tt-responsive">
             <nav>
               <ul>
               <li><a href="../information">Info</a></li>
