--- a/transforming-transportation/information/index.html
+++ b/transforming-transportation/information/index.html
@@ -63,7 +63,7 @@
          <p><a class="tt-contact" href="mailto:tini.tran@wri.org">Tini Tran</a></p>
          <p><a class="tt-contact" href="mailto:craig.brownstein@wri.org">Craig Brownstein</a></p>
 
-         <p class="tt-download"><a href="https://wri.org">Download Agenda</a></p>
+         <!--<p class="tt-download"><a href="https://wri.org">Download Agenda</a></p>-->
          
 
          <h2>Getting There</h2>
@@ -79,7 +79,7 @@
 
          <p>Metro 32, 36, 42</p>
 
-         <p><em>Circulator Bus</em></p>
+         <p><em>Via Circulator Bus</em></p>
 
          <p>Georgetown-Union Station</p>
 
