--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -17,7 +17,7 @@
 <body>
  <header>
        <div id="tt-header">
-         <img class="tt-logo" src="files/tt-logo.svg">
+         <a href="/"><img class="tt-logo" src="files/tt-logo.svg"></a>
           <label for="tt-responsive">&#9776;</label>
           <input type="checkbox" id="tt-responsive">
             <nav>
@@ -44,7 +44,7 @@
  
 <div id="section-2">
      <div id="section-2-1" class="tt-section">
-     <p class="tt-agenda-button"><a href="https://www.eventbrite.com/e/transforming-transportation-2019-tickets-52632684777">Register &#10230;</a></p>
+     <p class="tt-agenda-button">Registration Open 12/17</p>
      </div>
      
      <div id="section-2-2" class="tt-section">
