--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -35,7 +35,7 @@
 
   <div id="section-1">
      <div id="section-1-1">
-     <p class="tt-theme tt-section">Will New Mobility Deliver <span class="tt-font-bold">Sustainable Transport for All</span><br/></br/>
+     <p class="tt-theme tt-section">Will New Mobility Deliver <span class="tt-font-bold">Sustainable Transport for All?</span><br/></br/>
     <span class="tt-date">January 17&mdash;18, 2019</span></p>
      </div>
      
@@ -44,7 +44,7 @@
  
 <div id="section-2">
      <div id="section-2-1" class="tt-section">
-     <p class="tt-agenda-button">Registration Open 12/17</p>
+     <p class="tt-agenda-button">Registration Open Soon</p>
      </div>
      
      <div id="section-2-2" class="tt-section">
