tt-info-page-update 12/13

--- a/transforming-transportation/information/index.html
+++ b/transforming-transportation/information/index.html
@@ -22,7 +22,7 @@
           <input type="checkbox" id="tt-responsive">
             <nav>
               <ul>
-              <li>Info</li>
+              <li>Information</li>
               <li><a href="../resources">Resources</a></li>
               <li><a href="http://live.worldbank.org/transforming-transportation-2018" target="_blank">Watch</a></li>
               <li><a href="https://twitter.com/hashtag/TTDC19" target="_blank"><img src="../files/twitter-icon.png"></a></li>
