tt-resources-page-update 12/13

--- a/transforming-transportation/resources/index.html
+++ b/transforming-transportation/resources/index.html
@@ -21,7 +21,7 @@
           <input type="checkbox" id="tt-responsive">
             <nav>
               <ul>
-              <li><a href="../information">Info</a></li>
+              <li><a href="../information">Information</a></li>
               <li>Resources</li>
               <li><a href="http://live.worldbank.org/transforming-transportation-2018" target="_blank">Watch</a></li>
               <li><a href="https://twitter.com/hashtag/TTDC19" target="_blank"><img src="../files/twitter-icon.png"></a></li>
