--- a/transforming-transportation/information/index.html
+++ b/transforming-transportation/information/index.html
@@ -35,7 +35,7 @@
 
   <div id="section-1">
      <div id="section-1-1" class="tt-section">
-      <h1>General Information</h1>
+      <h1>Information</h1>
      </div>
      
      <div id="section-1-2" class="tt-general-info"></div>
