--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 <title>Transforming Transportation</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,11 +16,11 @@
 
 
 <body>
- <header>
-       <div id="tt-header">
+  <header>
+    <div id="tt-header">
          <a href="/"><img class="tt-logo" src="files/tt-logo.svg"></a>
-          <label for="tt-responsive">&#9776;</label>
-          <input type="checkbox" id="tt-responsive">
+           <label for="tt-responsive">&#9776;</label>
+           <input type="checkbox" id="tt-responsive">
             <nav>
               <ul>
               <li><a href="information">Information</a></li>
@@ -28,45 +29,39 @@
               <li><a href="https://twitter.com/hashtag/TTDC19" target="_blank"><img src="files/twitter-icon.png"></a></li>
              </ul>
             </nav>
-       </div>
+    </div>
   </header>
 
-<div id="main-body">
+ <div id="main-body">
 
-  <div id="section-1">
-     <div id="section-1-1">
-     <p class="tt-theme tt-section">Will New Mobility Deliver <span class="tt-font-bold">Sustainable Transport for All?</span><br/></br/>
-    <span class="tt-date">January 17&mdash;18, 2019</span></p>
-     </div>
+    <div id="section-1">
+       <div id="section-1-1">
+          <p class="tt-theme tt-section">Will New Mobility Deliver <span class="tt-font-bold">Sustainable Transport for All?</span><br/></br/>
+          <span class="tt-date">January 17&mdash;18, 2019</span></p>
+       </div>
      
-     <div id="section-1-2"></div>
- </div>
+      <div id="section-1-2"></div>
+   </div>
  
-<div id="section-2">
-     <div id="section-2-1" class="tt-section">
-     <p class="tt-agenda-button">Registration Open Soon</p>
-     </div>
+   <div id="section-2">
+       <div id="section-2-1" class="tt-section">
+          <p class="tt-agenda-button">Registration Open Soon</p>
+       </div>
      
-     <div id="section-2-2" class="tt-section">
-<p class="tt-intro">The World Bank and EMBARQ, the sustainable mobility initiative of WRI Ross Center for Sustainable Cities invite you to Transforming Transportation 2019 at the World Bank Headquarters in Washington, DC. <span class="tt-hash">#TTDC19</span></p>
-<p>This year’s conference will focus on how new technologies, data platforms and business models are integrating with current transport modes to solve old problems, from efficiency and equity to safety, and how new mobility can help address climate change. We will discuss the current and future challenges faced by countries across the world in providing sustainable mobility for everyone.</p>
-<div id="tt-logos">
-    <h2>Organizers</h2>
-     <div class="tt-organizers">
-      <img src="files/wri-ross-cities-logo.png" title="WRI Ross Cities" alt="wri ross cities logo">
-      <img src="files/world-bank-logo.png" title="World Bank" alt="world bank logo">
-     </div>
-     </div>
+      <div id="section-2-2" class="tt-section">
+         <p class="tt-intro">The World Bank and EMBARQ, the sustainable mobility initiative of WRI Ross Center for Sustainable Cities invite you to Transforming Transportation 2019 at the World Bank Headquarters in Washington, DC. <span class="tt-hash">#TTDC19</span></p>
+         <p>This year’s conference will focus on how new technologies, data platforms and business models are integrating with current transport modes to solve old problems, from efficiency and equity to safety, and how new mobility can help address climate change. We will discuss the current and future challenges faced by countries across the world in providing sustainable mobility for everyone.</p>
+            <div id="tt-logos">
+               <h2>Organizers</h2>
+               <div class="tt-organizers">
+              <img src="files/wri-ross-cities-logo.png" title="WRI Ross Cities" alt="wri ross cities logo">
+              <img src="files/world-bank-logo.png" title="World Bank" alt="world bank logo">
+           </div>
+      </div>
    
- </div>
+    </div>
  
  </div>
- 
- 
- 
- </div>
-
-
 
 
 </body>
