--- a/transforming-transportation/resources/index.html
+++ b/transforming-transportation/resources/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-1706823-30"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-1706823-30');
+</script>
+
 <title>Transforming Transportation | Resources</title>
 <meta name="viewport" content="width=device-width">
 <meta charset="UTF-8">
