--- a/transforming-transportation/resources/index.html
+++ b/transforming-transportation/resources/index.html
@@ -18,11 +18,11 @@
 <meta name="description" content="Transforming Transportation conference hosted by the World Resources Institute and the World Bank">
 <meta name="keywords" content="transforming transportation, cities, transforming transportation 2019, mobility conference, WRI Ross Center for Sustainable Cities, World Bank, EMBARQ">
 <meta name="author" content="WRI Ross Center for Sustainable Cities">
-<meta property="og:url" content="http://www.transformingtransportation.org/resources/" />
+<meta property="og:url" content="https://www.transformingtransportation.org/resources/" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Transforming Transportation | 2019" />
 <meta property="og:description" content="The World Bank and EMBARQ, the sustainable mobility initiative of WRI Ross Center for Sustainable Cities invite you to Transforming Transportation 2019 at the World Bank Headquarters in Washington, DC." />
-<meta property="og:image" content="http://www.transformingtransportation.org/files/tt-hero.jpg" />
+<meta property="og:image" content="https://www.transformingtransportation.org/files/tt-hero.jpg" />
 <link rel="shortcut icon" href="../files/tt-favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="../css/normalize.css" type="text/css">
 <link rel="stylesheet" href="../css/style.css" type="text/css">
