--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -15,7 +15,7 @@
 <title>Transforming Transportation</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
-<meta name="description" content="Transforming Transportation conference hosted by the World Resources Institute and the World Bank">
+<meta name="description" content="Transforming Transportation 2019, co-hosted by the World Resources Institute and the World Bank, will take place January 17-18, 2019 at the World Bank.">
 <meta name="keywords" content="transforming transportation, cities, transforming transportation 2019, mobility conference, WRI Ross Center for Sustainable Cities, World Bank, EMBARQ">
 <meta name="author" content="WRI Ross Center for Sustainable Cities">
 <meta property="og:url" content="https://www.transformingtransportation.org/" />
