--- a/transforming-transportation/resources/index.html
+++ b/transforming-transportation/resources/index.html
@@ -42,7 +42,7 @@
                <ul>
                   <li><a href="../information">Information</a></li>
                   <li>Resources</li>
-                  <li><a href="http://live.worldbank.org/transforming-transportation-2018" target="_blank">Watch</a></li>
+                  <li><a href="https://live.worldbank.org/transforming-transportation-2019" target="_blank">Watch</a></li>
                   <li><a href="https://twitter.com/hashtag/TTDC19" target="_blank"><img src="../files/twitter-icon.png"></a></li>
                </ul>
              </nav>
