--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -62,7 +62,7 @@
  
    <div id="section-2">
        <div id="section-2-1" class="tt-section">
-          <a href="https://www.eventbrite.com/e/transforming-transportation-2019-tickets-52632684777" target="_blank"><p class="tt-agenda-button">Register &#10230;</p></a>
+          <a href="https://live.worldbank.org/transforming-transportation-2019" target="_blank"><p class="tt-agenda-button">Watch Live &#10230;</p></a>
        </div>
      
       <div id="section-2-2" class="tt-section">
