--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -114,7 +114,7 @@
 
                   <tr>
                       <td><a href="https://www.ukaiddirect.org/" target="_blank"><img class="tt-partners-fixed-height" src="files/uk-aid-logo.png"></a></td>
-                      <td><a href="https://www.icao.int" target="_blank"><img src="files/icao-logo.png"></a></td>
+                      <td><a href="https://www.icao.int" target="_blank"><img class="tt-partners-secondary" src="files/icao-logo.png"></a><br /><a href="https://www.atag.org/" target="_blank"><img class="tt-partners-secondary" src="files/atag-logo.png"></a></td>
                       <td><a href="https://www.giz.de/en" target="_blank"><img src="files/giz-logo.png"></a></td>
                       <td><a href="https://www.bmz.de/en/" target="_blank"><img class="tt-partners-secondary" src="files/bmub-logo.png"></a><br/><a href="https://www.agora-verkehrswende.de/en/" target="_blank"><img class="tt-partners-secondary" src="files/agora-logo.jpg"></a></td>
                       <td><a href="https://www.bmz.de/en/" target="_blank"><img class="tt-partners-secondary" src="files/bmz-logo.png"></a><br/><a href="https://transformative-mobility.org/" target="_blank"><img class="tt-partners-secondary" src="files/tumi-logo.jpg"></a></td>
@@ -139,6 +139,7 @@
                <h2>Session Sponsors</h2>
                    <a href="https://www.ukaiddirect.org/" target="_blank"><img class="tt-partners-fixed-height" src="files/uk-aid-logo.png"></a>
                    <a href="https://www.icao.int" target="_blank"><img src="files/icao-logo.png"></a>
+                   <a href="https://www.atag.org/" target="_blank"><img class="tt-partners-secondary" src="files/atag-logo.png"></a>
                    <a href="https://www.giz.de/en" target="_blank"><img src="files/giz-logo.png"></a>
                    <a href="https://www.bmz.de/en/" target="_blank"><img class="tt-partners-secondary" src="files/bmub-logo.png"></a>
                    <a href="https://www.bmz.de/en/" target="_blank"><img class="tt-partners-secondary" src="files/bmz-logo.png"></a>
