registration link hide

--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -74,7 +74,7 @@
          
          <p>This year’s conference will focus on how new technologies, data platforms and business models are integrating with current transport modes to solve old problems, from efficiency and equity to safety, and how new mobility can help address climate change. We will discuss the current and future challenges faced by countries across the world in providing sustainable mobility for everyone.</p>
          
-         <p class="tt-registration"><a href="https://www.eventbrite.com/e/transforming-transportation-2019-tickets-52632684777" target="_blank">Registration Waitlisted</a> &#10230;</p>
+         <!--<p class="tt-registration"><a href="https://www.eventbrite.com/e/transforming-transportation-2019-tickets-52632684777" target="_blank">Registration Waitlisted</a> &#10230;</p>-->
 
          <hr class="tt-home-hr" />
             <div id="tt-logos">
