--- a/transforming-transportation/resources/index.html
+++ b/transforming-transportation/resources/index.html
@@ -93,7 +93,7 @@
 
                      <h2>Videos</h2>
 
-                          <p><em>Coming Soon</em></p>
+                          <p><a href="https://live.worldbank.org/transforming-transportation-2019" target="_blank">For panels in Preston Auditorium, please visit World Bank Live</a></p>
 
                      <h2>Presentations</h2>
 
