--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -20,7 +20,7 @@
 <meta name="author" content="WRI Ross Center for Sustainable Cities">
 <meta property="og:url" content="https://www.transformingtransportation.org/" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Transforming Transportation | 2020" />
+<meta property="og:title" content="Transforming Transportation" />
 <meta property="og:description" content="The World Bank and EMBARQ, the sustainable mobility initiative of WRI Ross Center for Sustainable Cities invite you to Transforming Transportation 2020 at the World Bank Headquarters in Washington, DC." />
 <meta property="og:image" content="https://www.transformingtransportation.org/files/tt-hero.jpg" />
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
@@ -42,7 +42,7 @@
               <ul>
               <li><a href="information">Information</a></li>
               <li><a href="resources">Resources</a></li>
-              <li><a href="become-a-member">Become A Member</li></a>
+              <li><a href="become-a-sponsor">Become a Sponsor</li></a>
               <li><a href="https://live.worldbank.org/transforming-transportation-2019" target="_blank">Watch</a></li>
               <li><a href="https://twitter.com/hashtag/TTDC19" target="_blank"><img src="files/twitter-icon.png"></a></li>
              </ul>
@@ -131,7 +131,7 @@
              </table>-->
               
                 
-               <div class="tt-partners-block">
+               <!--<div class="tt-partners-block">
                <h2>Sponsor</h2>
                    <a href="https://www.ptvgroup.com/en-us/our-story/" target="_blank"><img class="sponsor" src="files/ptv-group.png"></a>
                <h2>Partners</h2>
@@ -150,7 +150,7 @@
                    <a href="https://www.agora-verkehrswende.de/en/" target="_blank"><img class="tt-partners-secondary" src="files/agora-logo.jpg"></a>
                    <a href="https://transformative-mobility.org/" target="_blank"><img class="tt-partners-secondary" src="files/tumi-logo.jpg"></a>
                    <img src="files/embarq-logo.jpg">
-               </div>
+               </div>-->
       </div>
    
     </div>
