--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -54,7 +54,7 @@
 
     <div id="section-1">
        <div id="section-1-1">
-          <p class="tt-theme tt-section">Connecting People For <span class="tt-font-bold">Sustainable Growth</span><br/></br/>
+          <p class="tt-theme tt-section">Connecting People For <span class="tt-font-bold">Sustainable Growth.</span><br/></br/>
           <span class="tt-date">January 16&mdash;17, 2020</span></p>
        </div>
      
