--- a/transforming-transportation/become-a-sponsor/index.html
+++ b/transforming-transportation/become-a-sponsor/index.html
@@ -80,7 +80,65 @@
 			
 			<div id="tt-member">
 
+	<div class="tt-member-block tt-member-sponsor">
+		<div class="tt-member-block-header">
+			<p>SPONSOR</p>
+			<p>$25,000</p>
+		</div>
+		
+		<p><em>Available to for-profit organizations.</em></p>
 
+		<p><strong>Listed as sponsor</strong> in event program and website</p>
+
+		<p><strong>Mentions</strong> in event press release</p>
+
+		<p><strong>Logo display</strong> in event signage and promotional material</p>
+
+		<p><strong>Links</strong> from event website</p>
+
+		<p><strong>Acknowledgement by Master of Ceremony</strong> during opening keynote + twice a day</p>
+	</div>
+	
+	<div class="tt-member-block tt-parallel">
+		<div class="tt-member-block-header">
+			<p>PARALLEL SESSION HOST</p>
+			<p>$20,000</p>
+		</div>
+
+		<p><em>For any organization.</em></p>
+
+		<p><strong>Create your own</strong> parallel session along the conference theme</p>
+
+		<p><strong>Listed as parallel session host</strong> in event program and website</p>
+
+		<p><strong>Mentions</strong> in event press release</p>
+
+		<p><strong>Logo display</strong> in event signage and promotional material</p>
+
+		<p><strong>Links</strong> from event website</p>
+
+		<p><strong>Acknowledgement by Master of Ceremony</strong> during opening keynote + twice a day</p>
+	</div>
+	
+	<div class="tt-member-block tt-development">
+		<div class="tt-member-block-header">
+			<p>DEVELOPMENT PARTNER</p>
+			<p>$10,000</p>
+		</div>		
+
+		<p><em>For development institutions and non-profit organizations.</em></p>
+
+		<p><strong>Listed as development partner</strong> in event program and website</p>
+
+		<p><strong>Mentions</strong> in event press release</p>
+
+		<p><strong>Logo display</strong> in event signage and promotional material</p>
+
+		<p><strong>Links</strong> from event website</p>
+
+		<p><strong>Acknowledgement by Master of Ceremony</strong> during opening keynote + twice a day</p>
+	</div>
+	
 	<div class="tt-member-block tt-knowledge">
 		<div class="tt-member-block-header">
 			<p>KNOWLEDGE FAIR BOOTH</p>
@@ -92,70 +150,6 @@
 		<p><strong>10 ft x 10 ft booth</strong> in the World Bank Atrium</p>
 
 		<p><strong>2-day</strong> conference</p>
-		
-	</div>
-
-    <div class="tt-member-block tt-development">
-		<div class="tt-member-block-header">
-			<p>DEVELOPMENT PARTNER</p>
-			<p>$10,000</p>
-		</div>		
-
-		<p><em>For development institutions and non-profit organizations.</em></p>
-
-		<p><strong>Listed</strong> as development partner in event program and website</p>
-
-		<p><strong>Mentions</strong> in event press release</p>
-
-		<p><strong>Logo display</strong> in event signage and promotional material</p>
-
-		<p><strong>Links</strong> from event website</p>
-
-		<p><strong>Acknowledgement by Master of Ceremony</strong> during opening keynote + twice a day</p>
-	
-	</div>	
-
-
-	<div class="tt-member-block tt-parallel">
-		<div class="tt-member-block-header">
-			<p>PARALLEL SESSION HOST</p>
-			<p>$20,000</p>
-		</div>
-
-		<p><em>For any organization.</em></p>
-
-		<p><strong>Create your own</strong> parallel session along the conference theme</p>
-
-		<p><strong>Listed as session</strong> host in event program and website</p>
-
-		<p><strong>Mentions</strong> in event press release</p>
-
-		<p><strong>Logo display</strong> in event signage and promotional material</p>
-
-		<p><strong>Links</strong> from event website</p>
-
-		<p><strong>Acknowledgement by Master of Ceremony</strong> during opening keynote + twice a day</p>
-		
-	</div>	
-
-
-	<div class="tt-member-block tt-member-sponsor">
-		<div class="tt-member-block-header">
-			<p>SPONSOR</p>
-			<p>$25,000</p>
-		</div>
-		
-		<p><em>Available to for-profit organizations.</em></p>
-
-		<p><strong>Listed</strong> as sponsor in event program and website</p>
-
-		<p><strong>Mentions</strong> in event press release</p>
-
-		<p><strong>Logo display</strong> in event signage and promotional material</p>
-
-		<p><strong>Links</strong> from event website</p>
-
-		<p><strong>Acknowledgement by Master of Ceremony</strong> during opening keynote + twice a day</p>
 	</div>
 	
 </div>
