--- a/transforming-transportation/become-a-sponsor/index.html
+++ b/transforming-transportation/become-a-sponsor/index.html
@@ -154,7 +154,7 @@
 	
 </div>
 			
-		  <p>If you’re interested in any of these opportunities, please contact Wesley Uhl at <a href="mailto:wesley.uhl@wri.org">wesley.uhl@wri.org</a>.</p>
+		  <p>If you’re interested in any of these opportunities, please contact <strong>Wesley Uhl at <a href="mailto:wesley.uhl@wri.org">wesley.uhl@wri.org</a></strong>.</p>
 
           </div>
      </div>
