--- a/transforming-transportation/become-a-sponsor/index.html
+++ b/transforming-transportation/become-a-sponsor/index.html
@@ -78,6 +78,10 @@
 				
 			<h2 class="tt-resources-header">Partnerships and Categories</h2>
 			
+			<p>If you’re interested in any of these opportunities, please contact <strong>Wesley Uhl at <a href="mailto:wesley.uhl@wri.org">wesley.uhl@wri.org</a></strong>.</p>
+			
+			<p>&nbsp;</p>
+			
 			<div id="tt-member">
 
 	<div class="tt-member-block tt-member-sponsor">
@@ -153,8 +157,6 @@
 	</div>
 	
 </div>
-			
-		  <p>If you’re interested in any of these opportunities, please contact <strong>Wesley Uhl at <a href="mailto:wesley.uhl@wri.org">wesley.uhl@wri.org</a></strong>.</p>
 
           </div>
      </div>
