--- a/transforming-transportation/become-a-sponsor/index.html
+++ b/transforming-transportation/become-a-sponsor/index.html
@@ -78,7 +78,7 @@
 				
 			<h2 class="tt-resources-header">Partnerships and Categories</h2>
 			
-			<p>If you’re interested in any of these opportunities, please contact <span class="tt-member-contact">Wesley Uhl at <a href="mailto:wesley.uhl@wri.org">wesley.uhl@wri.org</a></span>.</p>
+			<p>If you’re interested in any of these opportunities, please contact us at <a href="mailto:sponsor@transformingtransportation.org">sponsor@transformingtransportation.org</a></span>.</p>
 			
 			<p>&nbsp;</p>
 			
