--- a/transforming-transportation/become-a-sponsor/index.html
+++ b/transforming-transportation/become-a-sponsor/index.html
@@ -127,12 +127,12 @@
 	<div class="tt-member-block tt-development">
 		<div class="tt-member-block-header">
 			<p>DEVELOPMENT PARTNER</p>
-			<p>$10,000</p>
+			<p>Closed</p>
 		</div>		
 
-		<p><em>For development institutions and non-profit organizations.</em></p>
+		<p><em>No longer accepting applications.</em></p>
 
-		<p><strong>Listed as development partner</strong> in event program and website</p>
+		<!--<p><strong>Listed as development partner</strong> in event program and website</p>
 
 		<p><strong>Mentions</strong> in event press release</p>
 
@@ -140,7 +140,7 @@
 
 		<p><strong>Links</strong> from event website</p>
 
-		<p><strong>Acknowledgement by Master of Ceremony</strong> during opening keynote + twice a day</p>
+		<p><strong>Acknowledgement by Master of Ceremony</strong> during opening keynote + twice a day</p>-->
 	</div>
 	
 	<div class="tt-member-block tt-knowledge">
