--- a/transforming-transportation/become-a-sponsor/index.html
+++ b/transforming-transportation/become-a-sponsor/index.html
@@ -106,33 +106,14 @@
 	<div class="tt-member-block tt-parallel">
 		<div class="tt-member-block-header">
 			<p>PARALLEL SESSION HOST</p>
-			<p>$20,000</p>
-		</div>
-
-		<p><em>For any organization.</em></p>
-
-		<p><strong>Create your own</strong> parallel session along the conference theme</p>
-
-		<p><strong>Listed as parallel session host</strong> in event program and website</p>
-
-		<p><strong>Mentions</strong> in event press release</p>
-
-		<p><strong>Logo display</strong> in event signage and promotional material</p>
-
-		<p><strong>Links</strong> from event website</p>
-
-		<p><strong>Acknowledgement by Master of Ceremony</strong> during opening keynote + twice a day</p>
-	</div>
-	
-	<div class="tt-member-block tt-development">
-		<div class="tt-member-block-header">
-			<p>DEVELOPMENT PARTNER</p>
 			<p>Closed</p>
-		</div>		
+		</div>
 
 		<p><em>No longer accepting applications.</em></p>
 
-		<!--<p><strong>Listed as development partner</strong> in event program and website</p>
+		<!--<p><strong>Create your own</strong> parallel session along the conference theme</p>
+
+		<p><strong>Listed as parallel session host</strong> in event program and website</p>
 
 		<p><strong>Mentions</strong> in event press release</p>
 
@@ -143,6 +124,25 @@
 		<p><strong>Acknowledgement by Master of Ceremony</strong> during opening keynote + twice a day</p>-->
 	</div>
 	
+	<div class="tt-member-block tt-development">
+		<div class="tt-member-block-header">
+			<p>DEVELOPMENT PARTNER</p>
+			<p>10,000</p>
+		</div>		
+
+		<p><em>For development institutions and non-profit organizations.</em></p>
+
+		<p><strong>Listed as development partner</strong> in event program and website</p>
+
+		<p><strong>Mentions</strong> in event press release</p>
+
+		<p><strong>Logo display</strong> in event signage and promotional material</p>
+
+		<p><strong>Links</strong> from event website</p>
+
+		<p><strong>Acknowledgement by Master of Ceremony</strong> during opening keynote + twice a day</p>
+	</div>
+	
 	<div class="tt-member-block tt-knowledge">
 		<div class="tt-member-block-header">
 			<p>KNOWLEDGE FAIR BOOTH</p>
@@ -151,7 +151,7 @@
 
 		<p><em>For organizations wishing to distribute information, display media or demonstrate a model.</em></p>
 
-		<p><strong>10 ft x 10 ft booth</strong> in the World Bank Atrium</p>
+		<p><strong>8 ft x 8 ft booth</strong> in the World Bank Atrium</p>
 
 		<p><strong>2-day</strong> conference</p>
 	</div>
