knowledge booth sponsor flyer link

--- a/transforming-transportation/become-a-sponsor/index.html
+++ b/transforming-transportation/become-a-sponsor/index.html
@@ -145,7 +145,7 @@
 	
 	<div class="tt-member-block tt-knowledge">
 		<div class="tt-member-block-header">
-			<p>KNOWLEDGE FAIR BOOTH</p>
+			<p>KNOWLEDGE BOOTH</p>
 			<p>$5,000</p>
 		</div>		
 
@@ -154,6 +154,8 @@
 		<p><strong>8 ft x 8 ft booth</strong> in the World Bank Atrium</p>
 
 		<p><strong>2-day</strong> conference</p>
+			
+		<p><strong><span style="color: black;">Become a Knowledge Booth Sponsor!</span> <a href="../files/become-knowledge-booth-sponsor.pdf">View Flyer</a></strong></p>
 	</div>
 	
 </div>
