meta image for 2020 updated

--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -22,7 +22,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Transforming Transportation" />
 <meta property="og:description" content="The World Bank and EMBARQ, the sustainable mobility initiative of WRI Ross Center for Sustainable Cities invite you to Transforming Transportation 2020 at the World Bank Headquarters in Washington, DC." />
-<meta property="og:image" content="https://www.transformingtransportation.org/files/tt-hero.jpg" />
+<meta property="og:image" content="https://www.transformingtransportation.org/files/tt-home-hero-2020.jpg" />
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 <link rel="shortcut icon" href="files/tt-favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="css/normalize.css" type="text/css">
