EMBARQ removed from text

--- a/transforming-transportation/become-a-sponsor/index.html
+++ b/transforming-transportation/become-a-sponsor/index.html
@@ -74,7 +74,7 @@
 
 				<p>Over the course of two days, 1,000+ participants from around the world explore ways to make mobility more accessible, safe, green and efficient for everyone.</p>
 
-				<p>Co-hosted by the World Bank and EMBARQ, the sustainable urban mobility initiative of WRI Ross Center for Sustainable Cities, Transforming Transportation provides multiple opportunities for engagement with other organizations.</p>
+				<p>Co-hosted by the World Bank and WRI Ross Center for Sustainable Cities, Transforming Transportation provides multiple opportunities for engagement with other organizations.</p>
 				
 			<h2 class="tt-resources-header">Partnerships and Categories</h2>
 			
