--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -63,7 +63,7 @@
  
    <div id="section-2">
        <div id="section-2-1" class="tt-section">
-          <!--<p class="tt-agenda-button">Register &#10230;</p>-->
+          <!--<p class="tt-agenda-button">Register &#10230;</p>--><p><strong>REGISTRATION CLOSED</strong></p>
        </div>
      
       <div id="section-2-2" class="tt-section">
