Added link for registration

--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -63,7 +63,7 @@
  
    <div id="section-2">
        <div id="section-2-1" class="tt-section">
-          <p class="tt-agenda-button">Register &#10230;</p><!--<p><strong>REGISTRATION CLOSED</strong></p>-->
+          <a href="https://www.cvent.com/events/transforming-transportation-2020-connecting-people-for-sustainable-growth/event-summary-9ae3e773ac124d6aa0355ef5b7d2d609.aspx?RefID=REG"><p class="tt-agenda-button">Register &#10230;</p></a><!--<p><strong>REGISTRATION CLOSED</strong></p>-->
        </div>
      
       <div id="section-2-2" class="tt-section">
