adjusted footer for new logo wall img

--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -84,8 +84,7 @@
             <div id="tt-logos">
                <!--<h2 class="tt-hosts">Hosted by</h2>-->
                <div class="tt-organizers">
-                   <a href="https://wrirosscities.org/" target="_blank"><img src="files/wri-ross-cities-logo.png" title="WRI Ross Cities" alt="wri ross cities logo"></a>
-                   <a href="https://www.worldbank.org/" target="_blank"><img src="files/world-bank-logo.png" title="World Bank" alt="world bank logo"></a>
+                   <img src="files/WRI20_TT_Footer.png" title="WRI Ross Cities" alt="wri ross cities logo">
                </div>
                
                
