--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -63,7 +63,7 @@
  
    <div id="section-2">
        <div id="section-2-1" class="tt-section">
-          <a href="https://live.worldbank.org/transforming-transportation-2020"><p class="tt-agenda-button">Watch the Livestream &#10230;</p></a><!--<p><strong>REGISTRATION CLOSED</strong></p>-->
+          <a href="https://live.worldbank.org/transforming-transportation-2020"><p class="tt-agenda-button">Watch the 2020 Video &#10230;</p></a>
        </div>
      
       <div id="section-2-2" class="tt-section">
