banner add across all pages/css update #3 8/28 20

--- a/transforming-transportation/become-a-sponsor/index.html
+++ b/transforming-transportation/become-a-sponsor/index.html
@@ -32,6 +32,9 @@
 
 
 <body>
+
+<div id="tt-top-banner"><a href="index.html"><p>Open Call for Proposals: Become a Session Host Partner</a></p></div>
+
     <header>
         <div id="tt-header">
              
@@ -141,9 +144,7 @@
 					</ul>
 				</p>
 
-				<p>To learn about our sponsorship packages, we remain available to support you, at&nbsp;<a data-is-link="mailto:sponsor@transformingtransportation.org" href="mailto:sponsor@transformingtransportation.org" rel="noreferrer nofollow" target="_blank">sponsor@transformingtransportation.org</a>.</p>
-
-			
+				<p>To learn about our sponsorship packages, please contact us at <a href="mailto:sponsor@transformingtransportation.org" rel="noreferrer noopener" tabindex="-1" target="_blank" title="mailto:sponsor@transformingtransportation.org">sponsor@transformingtransportation.org</a>.</p>
 
 
           </div>
