--- a/transforming-transportation/resources/index.html
+++ b/transforming-transportation/resources/index.html
@@ -31,6 +31,9 @@
 
 
 <body>
+
+<div id="tt-top-banner"><a href="../become-a-sponsor/index.html"><p>Open Call for Proposals: Become a Session Host Partner</a></p></div>
+
     <header>
         <div id="tt-header">
              
