removed index.html from banner link to sponsor page

--- a/transforming-transportation/become-a-sponsor/index.html
+++ b/transforming-transportation/become-a-sponsor/index.html
@@ -33,7 +33,7 @@
 
 <body>
 
-<div id="tt-top-banner"><a href="index.html"><p>Open Call for Proposals: Become a Session Host Partner</a></p></div>
+<div id="tt-top-banner"><a href=""><p>Open Call for Proposals: Become a Session Host Partner</a></p></div>
 
     <header>
         <div id="tt-header">
