--- a/transforming-transportation/resources/index.html
+++ b/transforming-transportation/resources/index.html
@@ -32,7 +32,7 @@
 
 <body>
 
-<div id="tt-top-banner"><a href="../become-a-sponsor/index.html"><p>Open Call for Proposals: Become a Session Host Partner</a></p></div>
+<div id="tt-top-banner"><a href="../become-a-sponsor/"><p>Open Call for Proposals: Become a Session Host Partner</a></p></div>
 
     <header>
         <div id="tt-header">
