og tags updated 8/28/20

--- a/transforming-transportation/resources/index.html
+++ b/transforming-transportation/resources/index.html
@@ -15,13 +15,13 @@
 <title>Transforming Transportation | Resources</title>
 <meta name="viewport" content="width=device-width">
 <meta charset="UTF-8">
-<meta name="description" content="Transforming Transportation 2020, co-hosted by the World Resources Institute and the World Bank, will take place January 16-17, 2020 at the World Bank.">
+<meta name="description" content="Transforming Transportation 2021, co-hosted by the World Resources Institute and the World Bank, will take place virtually from February 3-5, 2021.">
 <meta name="keywords" content="transforming transportation, cities, transforming transportation 2019, mobility conference, WRI Ross Center for Sustainable Cities, World Bank, EMBARQ">
 <meta name="author" content="WRI Ross Center for Sustainable Cities">
 <meta property="og:url" content="https://www.transformingtransportation.org/resources/" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Transforming Transportation | Resources" />
-<meta property="og:description" content="The World Bank and EMBARQ, the sustainable mobility initiative of WRI Ross Center for Sustainable Cities invite you to Transforming Transportation 2020 at the World Bank Headquarters in Washington, DC." />
+<meta property="og:description" content="Transforming Transportation 2021 will bring together sustainable mobility world leaders from the public, private, academic and civil society spheres in a global virtual event to discuss the path forward." />
 <meta property="og:image" content="https://www.transformingtransportation.org/files/tt-resources-header.jpg" />
 <link rel="shortcut icon" href="../files/tt-favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="../css/normalize.css" type="text/css">
