sponsor page update #2 8/28/20

--- a/transforming-transportation/become-a-sponsor/index.html
+++ b/transforming-transportation/become-a-sponsor/index.html
@@ -78,11 +78,11 @@
 
 				<p>	
 					<ul class="tt-list">
-						<li>A global gathering of government decision-makers, CEOs, mobility trendsetters and leading advocates focused on realizing universal sustainable mobility.</li>
-						<li>A forum with multi-dimensional impact: networking, knowledge sharing, policy discussions, business and partnership development.</li>
-						<li>18+ years helping drive the global sustainable mobility debate, bringing together public, private and non-profit organizations for impact.</li>
-						<li>Over the course of 3 days, 5,000 participants from around the world are expected to gather and explore ways to make mobility more accessible, safe, green and efficient for everyone.</li>
-						<li>A truly inclusive forum, at no cost to development practitioners, aiming to ensure that the right voices, experiences and insights from all spheres of the sector are represented. To maintain this objectivity, the Forum is funded solely by our sponsors and the organizers.&nbsp;</li>
+						<li><p>A global gathering of government decision-makers, CEOs, mobility trendsetters and leading advocates focused on realizing universal sustainable mobility.</p></li>
+						<li><p>A forum with multi-dimensional impact: networking, knowledge sharing, policy discussions, business and partnership development.</p></li>
+						<li><p>18+ years helping drive the global sustainable mobility debate, bringing together public, private and non-profit organizations for impact.</p></li>
+						<li><p>Over the course of 3 days, 5,000 participants from around the world are expected to gather and explore ways to make mobility more accessible, safe, green and efficient for everyone.</p></li>
+						<li><p>A truly inclusive forum, at no cost to development practitioners, aiming to ensure that the right voices, experiences and insights from all spheres of the sector are represented. To maintain this objectivity, the Forum is funded solely by our sponsors and the organizers.</p></li>
 					</ul>
 				</p>
 
@@ -136,11 +136,11 @@
 
 				<p>
 					<ul class="tt-list">
-						<li>Virtual Booths</li>
-						<li>Networking: One-to-one and group meetings</li>
-						<li>Banner and Logo exposure on Virtual Forum Platform, Website and Social Media</li>
-						<li>Access to live and pre-recorded streaming and hear from 70+ speakers from government, the private sector and academia</li>
-						<li>Private one-on-one session with team of WBG/WRI technical experts</li>
+						<li><p>Virtual Booths</p></li>
+						<li><p>Networking: One-to-one and group meetings</p></li>
+						<li><p>Banner and Logo exposure on Virtual Forum Platform, Website and Social Media</p></li>
+						<li><p>Access to live and pre-recorded streaming and hear from 70+ speakers from government, the private sector and academia</p></li>
+						<li><p>Private one-on-one session with team of WBG/WRI technical experts</p></li>
 					</ul>
 				</p>
 
