--- a/transforming-transportation/become-a-sponsor/index.html
+++ b/transforming-transportation/become-a-sponsor/index.html
@@ -80,7 +80,7 @@
 
 					<ul class="tt-list">
 						<li><p>Session Host Partners will design and deliver parallel sessions building on issues discussed in Plenary sessions. Cross-cutting areas and issues associated with poverty reduction, disadvantaged groups and communities, and building back better in the aftermath of COVID-19 are particularly encouraged.</p></li>
-						<li><p>Find out more about the <a href="../files/tt-sponsorship-brochure-parallel-session-2021.pdf">Session Host Partnership here</a> and submit your proposal by Wednesday, September 30, 2020.</p></li>
+						<li><p>Find out more about the <a href="../files/tt-sponsorship-brochure-parallel-session-2021.pdf">Session Host Partnership here</a> and submit your proposal by Wednesday October 21, 2020.</p></li>
 					</ul>
 
 				<h2 class="tt-header-grey">ADDITIONAL SPONSORSHIP OPPORTUNITIES</h2>
