speaker name change 2/2/21

--- a/transforming-transportation/index.html
+++ b/transforming-transportation/index.html
@@ -180,7 +180,7 @@
 				</div>
 
 				<div class="featured-speaker"><img src="files/stientje-van-veldhoven.jpg" />
-				<p><strong>Stientje Van Veldhoven</strong><br />
+				<p><strong>Stientje van Veldhoven</strong><br />
 				Minister for the Environment/Chair of the Transport Decarbonization Alliance, Netherlands</p>
 				</div>
 
