--- a/transforming-transportation/resources/index.html
+++ b/transforming-transportation/resources/index.html
@@ -78,7 +78,7 @@
                     		
                     	<h2>Op-Eds/Blogs</h2>
                     	
-							<p><a href="https://www.devex.com/news/sponsored/opinion-it-is-time-to-decarbonize-transport-99031">Opinion: It is time to decarbonize transport</a>, Devex</p>
+							<p><a href="https://www.devex.com/news/sponsored/opinion-it-is-time-to-decarbonize-transport-99031">Opinion: It Is Time to Decarbonize Transport</a>, Devex</p>
 
 							<p><a href="https://thecityfix.com/blog/disruption-and-refocusing-covid-response-and-the-climate-crisis-at-transforming-transportation-2021/">Disruption and Refocusing: COVID Response and the Climate Crisis at Transforming Transportation 2021</a>, TheCityFix</p>
 
@@ -145,9 +145,9 @@
 
 							<p><a href="http://news.trust.org/item/20200116170052-etv5y">It&rsquo;s Time to Hold Transportation Accountable for Global Sustainability</a>, Thomson Reuters Foundation</p>
 
-							<p><a href="https://thecityfix.com/blog/transforming-transportation-2019-day-1-live-updates/">Transforming Transportation 2020 Day 1: Connecting People for Sustainable Growth</a>, WRI Ross Center for Sustainable Cities</p>
+							<p><a href="https://thecityfix.com/blog/transforming-transportation-2019-day-1-live-updates/">Transforming Transportation 2020 Day 1: Connecting People for Sustainable Growth</a>, TheCityFix</p>
 
-							<p><a href="https://thecityfix.com/blog/transforming-transportation-2020-day-2-can-mobility-be-a-bridge-to-the-new-economy/">Transforming Transportation 2020 Day 2: Can Mobility Be a Bridge to the New Economy?</a>, WRI Ross Center for Sustainable Cities</p>
+							<p><a href="https://thecityfix.com/blog/transforming-transportation-2020-day-2-can-mobility-be-a-bridge-to-the-new-economy/">Transforming Transportation 2020 Day 2: Can Mobility Be a Bridge to the New Economy?</a>, TheCityFix</p>
 
 						<h2>Photos</h2>
 
